--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ h6 {
 #hero {
   width: 100%;
   height: 60vh;
-  background: url("../img/bg.gif") center center;
+  background: url("../img/bgft.jpg") center center;
   background-size: cover;
   position: relative;
   z-index: 1;
